[gd_scene load_steps=2 format=3 uid="uid://pause_menu_001"]

[ext_resource type="Script" path="res://ui/PauseMenu.gd" id="1"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -180.0
offset_right = 150.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PAUSED"
horizontal_alignment = 1

[node name="Space1" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Resume"

[node name="SettingsButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Settings"

[node name="Space2" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="DisconnectButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
text = "Disconnect & Exit"

[node name="QuitButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Quit"

[node name="SettingsPanel" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.9)

[node name="Panel" type="PanelContainer" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -350.0
offset_right = 400.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="SettingsPanel/Panel"]
layout_mode = 2

[node name="Title" type="Label" parent="SettingsPanel/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SETTINGS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="SettingsPanel/Panel/VBox"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="SettingsPanel/Panel/VBox"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
size_flags_vertical = 3

[node name="Audio" type="ScrollContainer" parent="SettingsPanel/Panel/VBox/TabContainer"]
layout_mode = 2

[node name="AudioVBox" type="VBoxContainer" parent="SettingsPanel/Panel/VBox/TabContainer/Audio"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VoiceQualityLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2
text = "Voice Quality: 4"

[node name="VoiceQualitySlider" type="HSlider" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2
min_value = 0.0
max_value = 5.0
step = 1.0
value = 3.0
tick_count = 6
ticks_on_borders = true

[node name="Space1" type="Control" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VoiceVolumeLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2
text = "Voice Volume: 2.50"

[node name="VoiceVolumeSlider" type="HSlider" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2
min_value = 0.5
max_value = 5.0
step = 0.1
value = 2.5

[node name="Space2" type="Control" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="InputDeviceLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2
text = "Input Device (Microphone):"

[node name="InputDeviceOption" type="OptionButton" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2

[node name="Space3" type="Control" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="OutputDeviceLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2
text = "Output Device (Speakers/Headphones):"

[node name="OutputDeviceOption" type="OptionButton" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2

[node name="Controls" type="ScrollContainer" parent="SettingsPanel/Panel/VBox/TabContainer"]
visible = false
layout_mode = 2

[node name="ControlsList" type="VBoxContainer" parent="SettingsPanel/Panel/VBox/TabContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Space" type="Control" parent="SettingsPanel/Panel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="BackButton" type="Button" parent="SettingsPanel/Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Back"

[node name="ControlsPanel" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
